syntax = "proto3";
package common;

option go_package = "game-protocols/common";

// ============================================================
// 核心消息基类 - 只包含所有消息必须的字段
// ============================================================
message MessageBase {
    // 游戏标识（用于多游戏隔离）
    string game_id = 1;          // 例如: "mmo", "card", "moba"
    
    // 用户标识
    int32 user_id = 2;           // 发送者用户 ID
    
    // 消息时序
    int64 timestamp = 3;         // 客户端时间戳（毫秒）
}

// ============================================================
// 可选扩展元数据 - 按需使用，不强制要求
// 用途：追踪、调试、版本控制等高级功能
// ============================================================
message MessageMeta {
    // 版本与兼容性
    string client_version = 1;   // 客户端版本，如 "1.2.3"
    string protocol_version = 2; // 协议版本，用于灰度发布
    
    // 设备与会话
    string device_id = 3;        // 设备 ID（用于多端登录检测）
    string session_id = 4;       // 会话 ID（可选，用于特殊场景）
    
    // 分布式追踪
    string trace_id = 5;         // 分布式追踪 ID（OpenTelemetry）
    string span_id = 6;          // Span ID
    
    // 扩展字段
    map<string, string> extra = 10;  // 自定义扩展字段
}

