package main

import (
	"fmt"
	"time"

	"game-gateway/pkg/protocol"
	"game-protocols/chat"
	"game-protocols/common"
	"google.golang.org/protobuf/proto"
)

func main() {
	fmt.Println("â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—")
	fmt.Println("â•‘     äºŒè¿›åˆ¶åè®® - å®Œæ•´äº¤äº’æµç¨‹æ¼”ç¤º                        â•‘")
	fmt.Println("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•")
	fmt.Println()

	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	// åœºæ™¯ï¼šUser A (1001) å‘ User B (1002) å‘é€èŠå¤©æ¶ˆæ¯
	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

	fmt.Println("ğŸ“– åœºæ™¯è¯´æ˜")
	fmt.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	fmt.Println("User A (ID: 1001) æƒ³å‘é€æ¶ˆæ¯ \"Hello World!\" ç»™ User B (ID: 1002)")
	fmt.Println()

	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	// æ­¥éª¤ 1: å®¢æˆ·ç«¯æ„å»ºæ¶ˆæ¯
	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	fmt.Println("ã€æ­¥éª¤ 1ã€‘å®¢æˆ·ç«¯æ„å»ºæ¶ˆæ¯")
	fmt.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	
	chatReq := &chat.ChatRequest{
		Base: &common.MessageBase{
			GameId:    "mmo",
			UserId:    1001,
			Timestamp: time.Now().Unix(),
		},
		ReceiverId: 1002,
		Content:    "Hello World!",
		Type:       chat.ChatRequest_TEXT,
	}
	
	fmt.Println("ä¸šåŠ¡æ¶ˆæ¯ (ChatRequest):")
	fmt.Printf("  GameId: %s\n", chatReq.Base.GameId)
	fmt.Printf("  å‘é€è€…: User %d\n", chatReq.Base.UserId)
	fmt.Printf("  æ¥æ”¶è€…: User %d\n", chatReq.ReceiverId)
	fmt.Printf("  å†…å®¹: \"%s\"\n", chatReq.Content)
	fmt.Printf("  ç±»å‹: %s\n", chatReq.Type)
	fmt.Println()

	// åºåˆ—åŒ–ä¸šåŠ¡æ¶ˆæ¯
	payload, _ := proto.Marshal(chatReq)
	fmt.Printf("åºåˆ—åŒ–åå¤§å°: %d bytes\n", len(payload))
	fmt.Print("åå…­è¿›åˆ¶: ")
	for i := 0; i < min(20, len(payload)); i++ {
		fmt.Printf("%02X ", payload[i])
	}
	if len(payload) > 20 {
		fmt.Printf("... (%d more)", len(payload)-20)
	}
	fmt.Println()
	fmt.Println()

	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	// æ­¥éª¤ 2: æ·»åŠ åè®®å¤´
	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	fmt.Println("ã€æ­¥éª¤ 2ã€‘æ·»åŠ åè®®å¤´")
	fmt.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	
	// æ„å»ºæ•°æ®åŒ…
	pkt := protocol.NewPacketWithSeq(protocol.RouteChat, 12345, payload)
	
	fmt.Println("åè®®å¤´å­—æ®µ:")
	fmt.Printf("  Magic: 0x%08X (æ ¡éªŒ)\n", protocol.MagicNumber)
	fmt.Printf("  Route: %d (CHAT)\n", pkt.Route)
	fmt.Printf("  Flags: 0x%02X (æ— å‹ç¼©/åŠ å¯†)\n", pkt.Flags)
	fmt.Printf("  Length: %d bytes\n", len(pkt.Payload))
	fmt.Printf("  Sequence: %d (è¯·æ±‚ID)\n", pkt.Sequence)
	fmt.Println()

	// ç¼–ç å®Œæ•´æ•°æ®åŒ…
	encoded := pkt.Encode()
	fmt.Printf("å®Œæ•´æ•°æ®åŒ…å¤§å°: %d bytes\n", len(encoded))
	fmt.Printf("  - å¤´éƒ¨: %d bytes (%.1f%%)\n", 
		protocol.HeaderSize, 
		float64(protocol.HeaderSize)/float64(len(encoded))*100)
	fmt.Printf("  - Payload: %d bytes (%.1f%%)\n", 
		len(payload),
		float64(len(payload))/float64(len(encoded))*100)
	fmt.Println()

	// æ˜¾ç¤ºå®Œæ•´æ•°æ®åŒ…ç»“æ„
	fmt.Println("å®Œæ•´æ•°æ®åŒ…ç»“æ„:")
	fmt.Println("  â”Œâ”€â”€â”€â”€â”€â”€â”€â”€â”¬â”€â”€â”€â”€â”€â”€â”€â”€â”¬â”€â”€â”€â”€â”€â”€â”€â”€â”¬â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”¬â”€â”€â”€â”€â”€â”€â”€â”€â”¬â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”¬â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”")
	fmt.Println("  â”‚ Magic  â”‚ Route  â”‚ Flags  â”‚ Reserved â”‚ Length â”‚ Sequence â”‚ Payload  â”‚")
	fmt.Println("  â”‚ 4bytes â”‚ 1byte  â”‚ 1byte  â”‚  2bytes  â”‚ 4bytes â”‚  4bytes  â”‚  å˜é•¿     â”‚")
	fmt.Println("  â””â”€â”€â”€â”€â”€â”€â”€â”€â”´â”€â”€â”€â”€â”€â”€â”€â”€â”´â”€â”€â”€â”€â”€â”€â”€â”€â”´â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”´â”€â”€â”€â”€â”€â”€â”€â”€â”´â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”´â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”˜")
	
	fmt.Print("  åå…­è¿›åˆ¶: ")
	for i := 0; i < protocol.HeaderSize; i++ {
		fmt.Printf("%02X ", encoded[i])
		if i == 3 || i == 4 || i == 5 || i == 7 || i == 11 {
			fmt.Print("â”‚ ")
		}
	}
	fmt.Print(" + [Payload...]")
	fmt.Println()
	fmt.Println()

	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	// æ­¥éª¤ 3: æ¨¡æ‹Ÿç½‘ç»œä¼ è¾“
	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	fmt.Println("ã€æ­¥éª¤ 3ã€‘é€šè¿‡ WebSocket å‘é€")
	fmt.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	fmt.Printf("Client A â”€â”€[%d bytes]â”€â”€> Gateway\n", len(encoded))
	fmt.Println("           (WebSocket Binary Frame)")
	fmt.Println()

	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	// æ­¥éª¤ 4: Gateway å¿«é€Ÿè·¯ç”±
	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	fmt.Println("ã€æ­¥éª¤ 4ã€‘Gateway æ¥æ”¶å¹¶è·¯ç”±")
	fmt.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	
	// Gateway åªè¯»å–å¤´éƒ¨
	start := time.Now()
	route, flags, length, seq, _ := protocol.DecodeHeader(encoded)
	elapsed := time.Since(start)
	
	fmt.Printf("âš¡ è§£æå¤´éƒ¨ (ä»… 16 bytes): è€—æ—¶ %v\n", elapsed)
	fmt.Printf("  Route: %d â†’ è·¯ç”±åˆ° Chat Service\n", route)
	fmt.Printf("  Flags: 0x%02X\n", flags)
	fmt.Printf("  Sequence: %d â†’ è®°å½•ç”¨äºå“åº”åŒ¹é…\n", seq)
	fmt.Printf("  Payload Length: %d bytes\n", length)
	fmt.Println()

	// Gateway æå–å¹¶è½¬å‘ Payload
	forwardPayload := encoded[protocol.HeaderSize:]
	fmt.Printf("âœ… Gateway è½¬å‘æ“ä½œ:\n")
	fmt.Printf("  æå– Payload: data[16:] â†’ %d bytes\n", len(forwardPayload))
	fmt.Printf("  Gateway â”€â”€[%d bytes Protobuf]â”€â”€> Chat Service\n", len(forwardPayload))
	fmt.Println("  (ç›´æ¥è½¬å‘ï¼Œæ— éœ€é‡æ–°ç¼–ç ï¼)")
	fmt.Println()

	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	// æ­¥éª¤ 5: Chat Service å¤„ç†
	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	fmt.Println("ã€æ­¥éª¤ 5ã€‘Chat Service å¤„ç†")
	fmt.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	
	// è§£æä¸šåŠ¡æ¶ˆæ¯
	var receivedReq chat.ChatRequest
	proto.Unmarshal(forwardPayload, &receivedReq)
	
	fmt.Printf("âœ… è§£æ ChatRequest:\n")
	fmt.Printf("  å‘é€è€…: User %d\n", receivedReq.Base.UserId)
	fmt.Printf("  æ¥æ”¶è€…: User %d\n", receivedReq.ReceiverId)
	fmt.Printf("  å†…å®¹: \"%s\"\n", receivedReq.Content)
	fmt.Println()

	// æ„å»ºå“åº” (ACK)
	fmt.Println("ğŸ“ æ„å»º ACK å“åº”:")
	ackResp := &chat.ChatResponse{
		Base: &common.MessageBase{
			GameId:    "mmo",
			UserId:    1001, // å‘ç»™å‘é€è€…
			Timestamp: time.Now().Unix(),
		},
		Success:   true,
		MessageId: 38, // æ•°æ®åº“ç”Ÿæˆçš„ ID
	}
	ackPayload, _ := proto.Marshal(ackResp)
	fmt.Printf("  ChatResponse å¤§å°: %d bytes\n", len(ackPayload))
	fmt.Printf("  Success: %v, MsgID: %d\n", ackResp.Success, ackResp.MessageId)
	fmt.Println()

	// æ„å»ºå¹¿æ’­æ¶ˆæ¯
	fmt.Println("ğŸ“¢ æ„å»ºå¹¿æ’­æ¶ˆæ¯ (å‘ç»™æ¥æ”¶è€…):")
	broadcast := &chat.MessageBroadcast{
		MessageId: 38,
		SenderId:  1001,
		Content:   "Hello World!",
		Timestamp: time.Now().Unix(),
		Type:      chat.ChatRequest_TEXT,
	}
	broadcastPayload, _ := proto.Marshal(broadcast)
	fmt.Printf("  MessageBroadcast å¤§å°: %d bytes\n", len(broadcastPayload))
	fmt.Printf("  å‘ç»™: User %d\n", receivedReq.ReceiverId)
	fmt.Printf("  æ¥è‡ª: User %d\n", broadcast.SenderId)
	fmt.Printf("  å†…å®¹: \"%s\"\n", broadcast.Content)
	fmt.Println()

	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	// æ­¥éª¤ 6: å“åº”å›ä¼ 
	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	fmt.Println("ã€æ­¥éª¤ 6ã€‘å“åº”å›ä¼ ç»™å®¢æˆ·ç«¯")
	fmt.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	
	// ACK å›ä¼ ç»™ Client A
	ackPkt := protocol.NewPacketWithSeq(protocol.RouteChat, 12345, ackPayload) // ä½¿ç”¨ç›¸åŒ seq
	ackEncoded := ackPkt.Encode()
	
	fmt.Printf("ğŸ“¤ ACK å‘ç»™ Client A:\n")
	fmt.Printf("  Gateway â”€â”€[%d bytes]â”€â”€> Client A\n", len(ackEncoded))
	fmt.Printf("  Sequence: %d (åŒ¹é…è¯·æ±‚)\n", ackPkt.Sequence)
	fmt.Printf("  Payload: ChatResponse (%d bytes)\n", len(ackPayload))
	fmt.Println()

	// å¹¿æ’­å‘ç»™ Client B
	broadcastPkt := protocol.NewPacket(protocol.RouteChat, broadcastPayload)
	broadcastEncoded := broadcastPkt.Encode()
	
	fmt.Printf("ğŸ“¤ å¹¿æ’­å‘ç»™ Client B:\n")
	fmt.Printf("  Gateway â”€â”€[%d bytes]â”€â”€> Client B\n", len(broadcastEncoded))
	fmt.Printf("  Payload: MessageBroadcast (%d bytes)\n", len(broadcastPayload))
	fmt.Println()

	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	// æ­¥éª¤ 7: å®¢æˆ·ç«¯æ¥æ”¶
	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	fmt.Println("ã€æ­¥éª¤ 7ã€‘å®¢æˆ·ç«¯æ¥æ”¶å¹¶è§£æ")
	fmt.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	
	// Client A æ¥æ”¶ ACK
	fmt.Println("ğŸ“¨ Client A æ”¶åˆ°å“åº”:")
	recvAckPkt, _ := protocol.Decode(ackEncoded)
	fmt.Printf("  Route: %d (CHAT)\n", recvAckPkt.Route)
	fmt.Printf("  Sequence: %d â†’ åŒ¹é…åˆ°è¯·æ±‚ #12345\n", recvAckPkt.Sequence)
	fmt.Printf("  Payload å¤§å°: %d bytes\n", len(recvAckPkt.Payload))
	
	// åˆ¤æ–­æ¶ˆæ¯ç±»å‹
	fmt.Println("  åˆ¤æ–­ç±»å‹: Payload å° â†’ ChatResponse")
	var recvAck chat.ChatResponse
	proto.Unmarshal(recvAckPkt.Payload, &recvAck)
	fmt.Printf("  âœ… ACK: Success=%v, MsgID=%d\n", recvAck.Success, recvAck.MessageId)
	fmt.Println()

	// Client B æ¥æ”¶å¹¿æ’­
	fmt.Println("ğŸ“¨ Client B æ”¶åˆ°å¹¿æ’­:")
	recvBroadcastPkt, _ := protocol.Decode(broadcastEncoded)
	fmt.Printf("  Route: %d (CHAT)\n", recvBroadcastPkt.Route)
	fmt.Printf("  Payload å¤§å°: %d bytes\n", len(recvBroadcastPkt.Payload))
	
	// åˆ¤æ–­æ¶ˆæ¯ç±»å‹
	fmt.Println("  åˆ¤æ–­ç±»å‹: Payload å¤§ â†’ MessageBroadcast")
	var recvBroadcast chat.MessageBroadcast
	proto.Unmarshal(recvBroadcastPkt.Payload, &recvBroadcast)
	fmt.Printf("  ğŸ“¢ æ”¶åˆ°æ¶ˆæ¯:\n")
	fmt.Printf("     æ¥è‡ª: User %d\n", recvBroadcast.SenderId)
	fmt.Printf("     å†…å®¹: \"%s\"\n", recvBroadcast.Content)
	fmt.Printf("     MsgID: %d\n", recvBroadcast.MessageId)
	fmt.Println()

	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	// æ€»ç»“
	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	fmt.Println("â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—")
	fmt.Println("â•‘                    æµç¨‹æ€»ç»“                               â•‘")
	fmt.Println("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•")
	fmt.Println()
	fmt.Println("âœ… å®Œæ•´å¾€è¿”æµç¨‹:")
	fmt.Println("   1. Client A æ„å»º ChatRequest â†’ +å¤´éƒ¨ â†’ å‘é€")
	fmt.Println("   2. Gateway è¯»16å­—èŠ‚ â†’ è·¯ç”±åˆ° Chat Service")
	fmt.Println("   3. Chat Service å¤„ç† â†’ è¿”å› ACK + å¹¿æ’­")
	fmt.Println("   4. Gateway è½¬å‘ ACK ç»™ Client A")
	fmt.Println("   5. Gateway è½¬å‘å¹¿æ’­ç»™ Client B")
	fmt.Println("   6. ä¸¤ä¸ªå®¢æˆ·ç«¯æ­£ç¡®è§£æ")
	fmt.Println()
	
	fmt.Println("ğŸ“Š å…³é”®æŒ‡æ ‡:")
	fmt.Printf("   åè®®å¼€é”€: %d bytes (å›ºå®š)\n", protocol.HeaderSize)
	fmt.Printf("   Gateway å¤„ç†: è¯»16å­—èŠ‚ + æå–Payload (æå¿«)\n")
	fmt.Printf("   ç±»å‹åŒºåˆ†: åŸºäº Payload å¤§å° (æ— éœ€é¢å¤–å­—æ®µ)\n")
	fmt.Println()
	
	fmt.Println("ğŸš€ å…³é”®ä¼˜åŠ¿:")
	fmt.Println("   âœ… Gateway æ— éœ€å®Œæ•´è§£æ Protobuf")
	fmt.Println("   âœ… ç›´æ¥è½¬å‘ Payloadï¼Œé›¶æ‹·è´")
	fmt.Println("   âœ… å›ºå®šå¤´éƒ¨ï¼Œè§£æé€Ÿåº¦æå¿«")
	fmt.Println("   âœ… æ”¯æŒå‹ç¼©/åŠ å¯†æ ‡å¿—")
	fmt.Println("   âœ… Sequence æ”¯æŒè¯·æ±‚-å“åº”åŒ¹é…")
	fmt.Println()

	fmt.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	fmt.Println("æ¼”ç¤ºå®Œæˆï¼åè®®è®¾è®¡éªŒè¯é€šè¿‡ âœ“")
	fmt.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
}

func min(a, b int) int {
	if a < b {
		return a
	}
	return b
}
