package main

import (
	"fmt"
	"time"

	"game-protocols/chat"
	"game-protocols/common"
	"google.golang.org/protobuf/proto"
)

func main() {
	fmt.Println("â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—")
	fmt.Println("â•‘        Protobuf è·¯ç”±å­—æ®µæ¼”ç¤º                              â•‘")
	fmt.Println("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•")
	fmt.Println()

	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	// æ¼”ç¤º 1: ChatResponse with routing fields
	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	fmt.Println("ã€æ¼”ç¤º 1ã€‘ChatResponse - å¸¦è·¯ç”±å­—æ®µ")
	fmt.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	
	resp := &chat.ChatResponse{
		Base: &common.MessageBase{
			GameId:    "mmo",
			UserId:    1001,
			Timestamp: time.Now().Unix(),
		},
		Success:   true,
		MessageId: 38,
		Timestamp: time.Now().Unix(),
		
		// ğŸ†• æ–°å¢çš„è·¯ç”±å­—æ®µ
		TargetUserId:    1001,  // å‘ç»™ User 1001
		TargetSessionId: "abc123",  // æˆ–æŒ‡å®šSession
	}

	fmt.Println("ChatResponse å†…å®¹:")
	fmt.Printf("  Success: %v\n", resp.Success)
	fmt.Printf("  MessageId: %d\n", resp.MessageId)
	fmt.Println()
	fmt.Println("âœ¨ è·¯ç”±ä¿¡æ¯:")
	fmt.Printf("  TargetUserId: %d\n", resp.TargetUserId)
	fmt.Printf("  TargetSessionId: %s\n", resp.TargetSessionId)
	fmt.Println()

	// åºåˆ—åŒ–
	respData, _ := proto.Marshal(resp)
	fmt.Printf("åºåˆ—åŒ–å¤§å°: %d bytes\n", len(respData))
	fmt.Print("æ•°æ® (å‰24 bytes): ")
	for i := 0; i < min(24, len(respData)); i++ {
		fmt.Printf("%02X ", respData[i])
	}
	if len(respData) > 24 {
		fmt.Printf("... (%d more)", len(respData)-24)
	}
	fmt.Println()
	fmt.Println()

	// Gateway æ¨¡æ‹Ÿè§£æ
	fmt.Println("ğŸ”€ Gateway è·¯ç”±å†³ç­–:")
	var parsedResp chat.ChatResponse
	proto.Unmarshal(respData, &parsedResp)
	
	if parsedResp.TargetUserId > 0 {
		fmt.Printf("  â†’ è·¯ç”±åˆ° User %d\n", parsedResp.TargetUserId)
		fmt.Printf("  â†’ æŸ¥æ‰¾ sessionManager.GetByUserID(%d)\n", parsedResp.TargetUserId)
	}
	if parsedResp.TargetSessionId != "" {
		fmt.Printf("  â†’ æˆ–è·¯ç”±åˆ° Session \"%s\"\n", parsedResp.TargetSessionId)
		fmt.Printf("  â†’ æŸ¥æ‰¾ sessionManager.Get(\"%s\")\n", parsedResp.TargetSessionId)
	}
	fmt.Println()

	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	// æ¼”ç¤º 2: MessageBroadcast with routing fields
	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	fmt.Println("ã€æ¼”ç¤º 2ã€‘MessageBroadcast - å¸¦è·¯ç”±å­—æ®µ")
	fmt.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")

	broadcast := &chat.MessageBroadcast{
		MessageId:  38,
		SenderId:   1001,
		SenderName: "Alice",
		Content:    "Hello everyone!",
		Timestamp:  time.Now().Unix(),
		Type:       chat.ChatRequest_TEXT,
		
		// ğŸ†• æ–°å¢çš„è·¯ç”±å­—æ®µ
		TargetUserId: 1002,  // å‘ç»™ User 1002
	}

	fmt.Println("MessageBroadcast å†…å®¹:")
	fmt.Printf("  SenderId: %d (%s)\n", broadcast.SenderId, broadcast.SenderName)
	fmt.Printf("  Content: \"%s\"\n", broadcast.Content)
	fmt.Printf("  MessageId: %d\n", broadcast.MessageId)
	fmt.Println()
	fmt.Println("âœ¨ è·¯ç”±ä¿¡æ¯:")
	fmt.Printf("  TargetUserId: %d\n", broadcast.TargetUserId)
	fmt.Println()

	// åºåˆ—åŒ–
	broadcastData, _ := proto.Marshal(broadcast)
	fmt.Printf("åºåˆ—åŒ–å¤§å°: %d bytes\n", len(broadcastData))
	fmt.Print("æ•°æ® (å‰24 bytes): ")
	for i := 0; i < min(24, len(broadcastData)); i++ {
		fmt.Printf("%02X ", broadcastData[i])
	}
	if len(broadcastData) > 24 {
		fmt.Printf("... (%d more)", len(broadcastData)-24)
	}
	fmt.Println()
	fmt.Println()

	// Gateway æ¨¡æ‹Ÿè§£æ
	fmt.Println("ğŸ”€ Gateway è·¯ç”±å†³ç­–:")
	var parsedBroadcast chat.MessageBroadcast
	proto.Unmarshal(broadcastData, &parsedBroadcast)
	
	if parsedBroadcast.TargetUserId > 0 {
		fmt.Printf("  â†’ è·¯ç”±åˆ° User %d\n", parsedBroadcast.TargetUserId)
		fmt.Printf("  â†’ session := sessionManager.GetByUserID(%d)\n", parsedBroadcast.TargetUserId)
		fmt.Println("  â†’ if session != nil { session.Send <- packet }")
	}
	fmt.Println()

	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	// å¯¹æ¯”ï¼šæœ‰æ— è·¯ç”±å­—æ®µçš„å¤§å°å·®å¼‚
	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	fmt.Println("ã€å¯¹æ¯”åˆ†æã€‘è·¯ç”±å­—æ®µçš„å¼€é”€")
	fmt.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")

	// ChatResponse - æ— è·¯ç”±å­—æ®µ
	respNoRoute := &chat.ChatResponse{
		Base: &common.MessageBase{
			GameId:    "mmo",
			UserId:    1001,
			Timestamp: time.Now().Unix(),
		},
		Success:   true,
		MessageId: 38,
	}
	respNoRouteData, _ := proto.Marshal(respNoRoute)

	// ChatResponse - æœ‰è·¯ç”±å­—æ®µ
	respWithRouteData, _ := proto.Marshal(resp)

	fmt.Println("ChatResponse:")
	fmt.Printf("  æ— è·¯ç”±å­—æ®µ: %d bytes\n", len(respNoRouteData))
	fmt.Printf("  æœ‰è·¯ç”±å­—æ®µ: %d bytes\n", len(respWithRouteData))
	fmt.Printf("  å¢åŠ : %d bytes (%.1f%%)\n", 
		len(respWithRouteData)-len(respNoRouteData),
		float64(len(respWithRouteData)-len(respNoRouteData))/float64(len(respNoRouteData))*100)
	fmt.Println()

	// MessageBroadcast - æ— è·¯ç”±å­—æ®µ
	bcNoRoute := &chat.MessageBroadcast{
		MessageId: 38,
		SenderId:  1001,
		Content:   "Hello everyone!",
		Timestamp: time.Now().Unix(),
	}
	bcNoRouteData, _ := proto.Marshal(bcNoRoute)

	// MessageBroadcast - æœ‰è·¯ç”±å­—æ®µ
	bcWithRouteData, _ := proto.Marshal(broadcast)

	fmt.Println("MessageBroadcast:")
	fmt.Printf("  æ— è·¯ç”±å­—æ®µ: %d bytes\n", len(bcNoRouteData))
	fmt.Printf("  æœ‰è·¯ç”±å­—æ®µ: %d bytes\n", len(bcWithRouteData))
	fmt.Printf("  å¢åŠ : %d bytes (%.1f%%)\n",
		len(bcWithRouteData)-len(bcNoRouteData),
		float64(len(bcWithRouteData)-len(bcNoRouteData))/float64(len(bcNoRouteData))*100)
	fmt.Println()

	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	// æ€»ç»“
	// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
	fmt.Println("â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—")
	fmt.Println("â•‘                        æ€»ç»“                               â•‘")
	fmt.Println("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•")
	fmt.Println()
	fmt.Println("âœ… è·¯ç”±å­—æ®µå·²æˆåŠŸæ·»åŠ åˆ° Protobuf å®šä¹‰")
	fmt.Println()
	fmt.Println("ğŸ“Š å¼€é”€åˆ†æ:")
	fmt.Println("  - æ¯æ¡æ¶ˆæ¯å¢åŠ  ~2-10 bytesï¼ˆå–å†³äº UserID å¤§å°ï¼‰")
	fmt.Println("  - å¯¹äºå…¸å‹æ¶ˆæ¯ï¼ˆ100+ bytesï¼‰ï¼Œå¼€é”€ < 10%")
	fmt.Println()
	fmt.Println("ğŸš€ ä¼˜åŠ¿:")
	fmt.Println("  âœ… Gateway æ— éœ€ç»´æŠ¤çŠ¶æ€æ˜ å°„")
	fmt.Println("  âœ… Backend æ˜¾å¼æŒ‡å®šè·¯ç”±ç›®æ ‡")
	fmt.Println("  âœ… æ”¯æŒçµæ´»çš„è·¯ç”±ç­–ç•¥ï¼ˆUserID æˆ– SessionIDï¼‰")
	fmt.Println("  âœ… å‘åå…¼å®¹ï¼ˆæ–°å­—æ®µå¯é€‰ï¼‰")
	fmt.Println()
	fmt.Println("ğŸ“ ä½¿ç”¨æ–¹å¼:")
	fmt.Println("  Chat Service åœ¨æ„å»ºå“åº”æ—¶è®¾ç½® TargetUserId")
	fmt.Println("  Gateway è¯»å–è¯¥å­—æ®µå†³å®šè½¬å‘ç›®æ ‡")
	fmt.Println()
	fmt.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	fmt.Println("æ¼”ç¤ºå®Œæˆï¼âœ“")
	fmt.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
}

func min(a, b int) int {
	if a < b {
		return a
	}
	return b
}
