package main

import (
	"fmt"
	"log"
	"net/url"
	"time"

	"game-gateway/pkg/protocol"
	"game-protocols/chat"
	"game-protocols/common"
	"github.com/gorilla/websocket"
	"google.golang.org/protobuf/proto"
)

func main() {
	log.Println("========== WebSocket äºŒè¿›åˆ¶åè®®æ¼”ç¤º ==========\n")

	// è¿æ¥åˆ° Gateway
	u := url.URL{Scheme: "ws", Host: "localhost:8080", Path: "/ws"}
	log.Printf("è¿æ¥åˆ°: %s\n", u.String())

	conn, _, err := websocket.DefaultDialer.Dial(u.String(), nil)
	if err != nil {
		log.Fatal("è¿æ¥å¤±è´¥:", err)
	}
	defer conn.Close()

	// åˆ›å»ºåè®®åŒ…è£…å™¨
	wsConn := protocol.NewWSConn(conn)
	log.Println("âœ… å·²è¿æ¥\n")

	// ========== ç¤ºä¾‹ 1: å‘é€èŠå¤©æ¶ˆæ¯ ==========
	log.Println("ã€ç¤ºä¾‹ 1ã€‘å‘é€èŠå¤©æ¶ˆæ¯")
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")

	// 1. åˆ›å»ºä¸šåŠ¡æ¶ˆæ¯ (ChatRequest)
	chatReq := &chat.ChatRequest{
		Base: &common.MessageBase{
			GameId:    "mmo",
			UserId:    1001,
			Timestamp: time.Now().Unix(),
		},
		ReceiverId: 1002,
		Content:    "Hello from binary protocol!",
		Type:       chat.ChatRequest_TEXT,
	}

	// 2. åºåˆ—åŒ–ä¸šåŠ¡æ¶ˆæ¯
	payload, err := proto.Marshal(chatReq)
	if err != nil {
		log.Fatal("åºåˆ—åŒ–å¤±è´¥:", err)
	}
	log.Printf("ä¸šåŠ¡æ¶ˆæ¯å¤§å°: %d bytes\n", len(payload))

	// 3. å‘é€è¯·æ±‚ï¼ˆè‡ªåŠ¨ç”Ÿæˆåºåˆ—å·ï¼‰
	seq, err := wsConn.SendRequest(protocol.RouteChat, payload)
	if err != nil {
		log.Fatal("å‘é€å¤±è´¥:", err)
	}
	log.Printf("âœ… å·²å‘é€ (åºåˆ—å·: %d)\n", seq)

	// 4. ç­‰å¾…å“åº”
	log.Println("\nç­‰å¾…æœåŠ¡å™¨å“åº”...")
	timeout := time.After(5 * time.Second)
	
	select {
	case <-timeout:
		log.Println("â± è¶…æ—¶")
	default:
		wsConn.SetReadLimit(1024 * 1024) // 1MB é™åˆ¶
		pkt, err := wsConn.ReadPacket()
		if err != nil {
			log.Printf("è¯»å–å“åº”å¤±è´¥: %v\n", err)
		} else {
			log.Printf("ğŸ“¨ æ”¶åˆ°å“åº”: %s\n", pkt)
			
			// æ£€æŸ¥åºåˆ—å·æ˜¯å¦åŒ¹é…
			if pkt.Sequence == seq {
				log.Println("âœ… åºåˆ—å·åŒ¹é…")
			}
			
			// è§£æå“åº”
			var resp chat.ChatResponse
			if err := proto.Unmarshal(pkt.Payload, &resp); err == nil {
				log.Printf("ChatResponse: Success=%v, MsgID=%d\n", resp.Success, resp.MessageId)
			}
		}
	}

	// ========== ç¤ºä¾‹ 2: åè®®å¤´è¯¦è§£ ==========
	log.Println("\nã€ç¤ºä¾‹ 2ã€‘åè®®å¤´ç»“æ„åˆ†æ")
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")

	// åˆ›å»ºä¸€ä¸ªæµ‹è¯•æ•°æ®åŒ…
	testPayload := []byte("test data")
	testPkt := protocol.NewPacketWithSeq(protocol.RouteChat, 12345, testPayload)
	testPkt.Flags.SetFlag(protocol.FlagCompressed) // è®¾ç½®å‹ç¼©æ ‡å¿—
	
	encoded := testPkt.Encode()
	
	log.Printf("å®Œæ•´æ•°æ®åŒ…: %d bytes\n", len(encoded))
	log.Printf("å¤´éƒ¨å¤§å°: %d bytes\n", protocol.HeaderSize)
	log.Printf("Payload: %d bytes\n", len(testPayload))

	// è§£æå¤´éƒ¨
	route, flags, payloadLen, seq2, err := protocol.DecodeHeader(encoded)
	if err != nil {
		log.Fatal(err)
	}

	log.Printf("\nè§£æç»“æœ:\n")
	log.Printf("  Route: %d (%s)\n", route, getRouteName(route))
	log.Printf("  Flags: 0x%02X ", flags)
	if flags.HasFlag(protocol.FlagCompressed) {
		log.Printf("(å‹ç¼©) ")
	}
	if flags.HasFlag(protocol.FlagEncrypted) {
		log.Printf("(åŠ å¯†) ")
	}
	log.Println()
	log.Printf("  Payload Length: %d bytes\n", payloadLen)
	log.Printf("  Sequence: %d\n", seq2)

	// æ˜¾ç¤ºåå…­è¿›åˆ¶
	log.Printf("\nåå…­è¿›åˆ¶å¤´éƒ¨:\n  ")
	for i := 0; i < protocol.HeaderSize && i < len(encoded); i++ {
		log.Printf("%02X ", encoded[i])
		if i == 3 || i == 4 || i == 5 || i == 7 || i == 11 {
			log.Printf("| ")
		}
	}
	log.Println()
	log.Println("  â†‘Magic    â†‘R â†‘F â†‘Rsv  â†‘Length    â†‘Sequence")

	// ========== ç¤ºä¾‹ 3: æ€§èƒ½å¯¹æ¯” ==========
	log.Println("\nã€ç¤ºä¾‹ 3ã€‘åè®®å¼€é”€åˆ†æ")
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")

	sizes := []int{50, 100, 500, 1000, 5000}
	log.Printf("%-15s %-15s %-15s %-10s\n", "ä¸šåŠ¡æ•°æ®", "å®Œæ•´åŒ…å¤§å°", "å¼€é”€", "å¼€é”€æ¯”ä¾‹")
	log.Println("â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”")
	
	for _, size := range sizes {
		testData := make([]byte, size)
		testPkt := protocol.NewPacket(protocol.RouteChat, testData)
		encoded := testPkt.Encode()
		overhead := len(encoded) - size
		ratio := float64(overhead) / float64(size) * 100
		
		log.Printf("%-15d %-15d %-15d %.2f%%\n", size, len(encoded), overhead, ratio)
	}

	log.Println("\n========== æ¼”ç¤ºç»“æŸ ==========")
}

func getRouteName(route protocol.RouteType) string {
	switch route {
	case protocol.RouteGame:
		return "GAME"
	case protocol.RouteChat:
		return "CHAT"
	case protocol.RouteSystem:
		return "SYSTEM"
	default:
		return "UNKNOWN"
	}
}
