package client

import (
	"fmt"
	"log"
	"net/url"
	"sync/atomic"
	"time"

	"game-gateway/pkg/protocol"
	"game-protocols/chat"
	"game-protocols/common"
	"stress_go/model"

	"github.com/gorilla/websocket"
	"google.golang.org/protobuf/proto"
)

// GameChatClient æ¸¸æˆèŠå¤©å®¢æˆ·ç«¯
type GameChatClient struct {
	userID int32
	conn   *protocol.WSConn
	seq    uint32
	debug  bool
}

// NewGameChatClient åˆ›å»ºæ–°çš„æ¸¸æˆèŠå¤©å®¢æˆ·ç«¯
func NewGameChatClient(userID int32, gatewayURL string, debug bool) (*GameChatClient, error) {
	u, err := url.Parse(gatewayURL)
	if err != nil {
		return nil, fmt.Errorf("invalid URL: %w", err)
	}

	c, _, err := websocket.DefaultDialer.Dial(u.String(), nil)
	if err != nil {
		return nil, fmt.Errorf("dial failed: %w", err)
	}

	return &GameChatClient{
		userID: userID,
		conn:   protocol.NewWSConn(c),
		seq:    0,
		debug:  debug,
	}, nil
}

// Close å…³é—­è¿æ¥
func (c *GameChatClient) Close() error {
	return c.conn.Close()
}

// Bind ç»‘å®šç”¨æˆ·
func (c *GameChatClient) Bind() error {
	bindReq := &chat.ChatRequest{
		Base: &common.MessageBase{
			GameId:    "mmo",
			UserId:    c.userID,
			Timestamp: time.Now().Unix(),
		},
		ReceiverId: c.userID,
		Content:    "bind",
		Type:       chat.ChatRequest_TEXT,
	}

	payload, err := proto.Marshal(bindReq)
	if err != nil {
		return fmt.Errorf("marshal bind request failed: %w", err)
	}

	_, err = c.conn.SendRequest(protocol.RouteChat, payload)
	if err != nil {
		return fmt.Errorf("send bind request failed: %w", err)
	}
	atomic.AddUint32(&c.seq, 1)

	if c.debug {
		log.Printf("[User %d] Sent Bind request", c.userID)
	}

	// ç­‰å¾… Bind ACK (æ–°æ¶æ„ä¸‹åº”å¿«é€Ÿè¿”å›)
	c.conn.SetReadDeadline(time.Now().Add(10 * time.Second))
	_, err = c.conn.ReadPacket()
	if err != nil {
		return fmt.Errorf("read bind ack failed: %w", err)
	}

	if c.debug {
		log.Printf("[User %d] âœ… Bind successful", c.userID)
	}

	return nil
}

// SendMessage å‘é€æ¶ˆæ¯
func (c *GameChatClient) SendMessage(targetID int32, content string) error {
	sendReq := &chat.ChatRequest{
		Base: &common.MessageBase{
			GameId:    "mmo",
			UserId:    c.userID,
			Timestamp: time.Now().Unix(),
		},
		ReceiverId: targetID,
		Content:    content,
		Type:       chat.ChatRequest_TEXT,
	}

	payload, err := proto.Marshal(sendReq)
	if err != nil {
		return fmt.Errorf("marshal send request failed: %w", err)
	}

	_, err = c.conn.SendRequest(protocol.RouteChat, payload)
	if err != nil {
		return fmt.Errorf("send message failed: %w", err)
	}
	atomic.AddUint32(&c.seq, 1)

	if c.debug {
		log.Printf("[User %d] ğŸ“¤ Sent message to %d: %s", c.userID, targetID, content)
	}

	return nil
}

// ReceiveMessages æ¥æ”¶æ¶ˆæ¯
func (c *GameChatClient) ReceiveMessages(expectedCount int, timeout time.Duration) (int, error) {
	receivedCount := 0
	c.conn.SetReadDeadline(time.Now().Add(timeout))

	for receivedCount < expectedCount {
		pkt, err := c.conn.ReadPacket()
		if err != nil {
			if receivedCount > 0 {
				// å·²ç»æ¥æ”¶åˆ°ä¸€äº›æ¶ˆæ¯ï¼Œå¯èƒ½æ˜¯è¶…æ—¶
				return receivedCount, fmt.Errorf("partial receive (%d/%d): %w", receivedCount, expectedCount, err)
			}
			return 0, fmt.Errorf("receive failed: %w", err)
		}

		if pkt.Route != protocol.RouteChat {
			continue
		}

		// å°è¯•è§£æä¸º Broadcast
		var bc chat.MessageBroadcast
		if err := proto.Unmarshal(pkt.Payload, &bc); err == nil && bc.Content != "" && bc.SenderId != c.userID {
			receivedCount++
			if c.debug {
				log.Printf("[User %d] ğŸ“¨ Broadcast from %d: %s", c.userID, bc.SenderId, bc.Content)
			}
			continue
		}

		// å°è¯•è§£æä¸º ACK
		var resp chat.ChatResponse
		if err := proto.Unmarshal(pkt.Payload, &resp); err == nil && resp.Success {
			receivedCount++
			if c.debug {
				log.Printf("[User %d] âœ… ACK received", c.userID)
			}
			continue
		}
	}

	return receivedCount, nil
}

// RunTest è¿è¡Œå•æ¬¡æµ‹è¯•
func (c *GameChatClient) RunTest(numMessages int) *model.RequestResult {
	result := &model.RequestResult{
		UserID:  c.userID,
		Success: false,
	}

	startTime := time.Now()

	// 1. Bind
	if err := c.Bind(); err != nil {
		result.Error = fmt.Errorf("bind failed: %w", err)
		result.Duration = time.Since(startTime)
		return result
	}

	// 2. å¾ªç¯æ‰§è¡Œï¼šå‘é€æ¶ˆæ¯ -> æ¥æ”¶å“åº”
	targetID := c.userID + 1
	if targetID >= 5000 { // æ‰©å¤§èŒƒå›´ä»¥é€‚åº”æ›´å¤§è§„æ¨¡æµ‹è¯•
		targetID = 2000
	}

	for i := 0; i < numMessages; i++ {
		content := fmt.Sprintf("Test message %d from %d", i+1, c.userID)

		// å‘é€
		if err := c.SendMessage(targetID, content); err != nil {
			result.Error = fmt.Errorf("send message %d failed: %w", i+1, err)
			result.Duration = time.Since(startTime)
			return result
		}
		result.MessagesSent++

		// æ¥æ”¶ (Ping-Pongæ¨¡å¼ï¼šæ¯å‘ä¸€æ¡ï¼Œå¿…é¡»æ”¶åˆ° ACK æ‰èƒ½å‘ä¸‹ä¸€æ¡)
		// è¿™æ ·å¯ä»¥é¿å…ç¬é—´å‘é€å¤§é‡æ¶ˆæ¯å¯¼è‡´çš„ç¼“å†²åŒºæº¢å‡ºæˆ–æœåŠ¡å™¨è¿‡è½½
		// åŒæ—¶ä¹Ÿæ›´ç¬¦åˆçœŸå®ç”¨æˆ·çš„èŠå¤©ä¹ æƒ¯
		// æ¯æ¬¡è‡³å°‘ç­‰å¾…æ”¶åˆ° 1 ä¸ªåŒ… (ACK)
		received, err := c.ReceiveMessages(1, 30*time.Second)
		result.MessagesRecv += received

		if err != nil {
			result.Error = fmt.Errorf("receive ack for message %d failed: %w", i+1, err)
			result.Duration = time.Since(startTime)
			return result
		}
	}

	result.Success = true
	result.Duration = time.Since(startTime)

	return result
}
